<resources>
    <string name="app_name">Flat</string>

    <!--Login activity-->
    <string name="usernameTextField">Username</string>
    <string name="passwordTextField">Password</string>
    <string name="signInButtonText">Sign In</string>

    <!--Charges activity-->
    <string name="charges_name">Charges</string>
    <string name="charges_title">Charges – %1$tb %1$tY</string>
    <string name="charges_revenues_tab">Revenues</string>
    <string name="charges_expenses_tab">Expenses</string>
    <string name="charges_summary_tab">Summary</string>
    <string name="action_setmonth">Set Date</string>

    <!--Transfers activity-->
    <string name="transfers_name">Transfers</string>
    <string name="transfers_title">Transfers – %1$tb %1$tY</string>
    <string name="transfers_tab_1">Outgoing</string>
    <string name="transfers_tab_2">Incoming</string>
    <string name="transfers_tab_3">Summary</string>

    <!--New revenue activity-->
    <string name="title_activity_new_revenue">NewRevenueActivity</string>
    <string name="new_revenue_activity_title">New Revenue</string>
    <string name="new_revenue_title">Enter revenue name</string>
    <string name="new_revenue_amount">Enter amount</string>
    <string name="new_revenue_date">Set date</string>
    <string name="new_revenue_category">Category</string>

    <!--Sorting-->
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="user">User</string>
    <string name="date">Date</string>
    <string name="sort_order_title">Select sort order</string>
    <string name="action_sort_by">Sort by</string>

    <!--Navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_charges_title">Charges</string>
    <string name="nav_statistics_title">Statistics</string>
    <string name="nav_transfers_title">Transfers</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_logout_title">Logout</string>
    <string name="empty_charges_list_text">There is nothing to show</string>

    <!--Notifications-->
    <string name="notification_expenses_name">Expenses</string>
    <string name="notification_expenses_summary_title">Expenses</string>
    <string name="notification_expenses_summary_text">You have new expenses</string>
    <string name="notification_expenses_text">%1$s charged you %2$.2f for %3$s</string>

    <!--General-->
    <string name="network_error">Network error try again later</string>

</resources>
